--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
                 <span><i class="fab fa-youtube"></i></span>
             </div>
         </div>
-        <div class="section mt-3" data-aos="fade-up" id="apropos">
-            <div class="container">
+        <div class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
+            <div class="container " >
                 <div class="row flex-row align-items-center  card " data-aos="fade-up" data-aos-offset="8">
                     <div class="mt-5 col-lg-6 col-md-6 col-sm-12">
                         <img src="public/images/about.png" alt="about me" /> 
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="">
-                            <div class="card-body">
+                        
+                            <div class=" card-body">
                                 <div class="h4 mt-0 title">About</div>
                                 <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.
                                 </p>
@@ -147,8 +147,8 @@
                                     showcase your portfolio, skills and experience. <a href="#" target="_blank">Learn
                                         More</a></p>
                             </div>
-                        </div>
-                        <div class="">
+                        
+                        <div >
                             <div class="card-body">
                                 <div class="h4 mt-0 title">Basic Information</div>
                                 <div class="row">
@@ -303,108 +303,63 @@
                             </ul>
                         </div>
                     </div>
-
-                    <div class="row portfolio-container" data-aos="fade-up">
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
+                    <div class="container-fluid p-0">
+                        <div class="row g-0">
+                            <div class="col-lg-4 col-sm-6">
+                                <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
+                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                                    <div class="portfolio-box-caption">
+                                        <div class="project-category text-white-50">Category</div>
+                                        <div class="project-name">Project Name</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
+                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                                    <div class="portfolio-box-caption">
+                                        <div class="project-category text-white-50">Category</div>
+                                        <div class="project-name">Project Name</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
+                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                                    <div class="portfolio-box-caption">
+                                        <div class="project-category text-white-50">Category</div>
+                                        <div class="project-name">Project Name</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
+                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                                    <div class="portfolio-box-caption">
+                                        <div class="project-category text-white-50">Category</div>
+                                        <div class="project-name">Project Name</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+                                    <div class="portfolio-box-caption">
+                                        <div class="project-category text-white-50">Category</div>
+                                        <div class="project-name">Project Name</div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
+                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+                                    <div class="portfolio-box-caption p-3">
+                                        <div class="project-category text-white-50">Category</div>
+                                        <div class="project-name">Project Name</div>
+                                    </div>
+                                </a>
                             </div>
                         </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-2.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-3.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-4.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-5.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-6.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                            <div class="portfolio-wrap">
-                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                                <div class="portfolio-links">
-                                    <a href="public/images/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
-                                        class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </div>
@@ -698,6 +653,8 @@
     <script src="public/vendors/venobox/venobox.min.css"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/parallax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+
     <script src="public/js/main.js"></script>
 
 
