--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <!-- Main CSS File -->
     <link href="public/css/main.css" rel="stylesheet">
+    <link href="public/css/style.css" rel="stylesheet">
+
 
     <title>Oumaima Creation CV</title>
 </head>
@@ -307,7 +309,7 @@
                         <div class="row g-0">
                             <div class="col-lg-4 col-sm-6">
                                 <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
-                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
+                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
                                     <div class="portfolio-box-caption">
                                         <div class="project-category text-white-50">Category</div>
                                         <div class="project-name">Project Name</div>
@@ -315,8 +317,8 @@
                                 </a>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
-                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
+                                <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
+                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
                                     <div class="portfolio-box-caption">
                                         <div class="project-category text-white-50">Category</div>
                                         <div class="project-name">Project Name</div>
@@ -324,8 +326,8 @@
                                 </a>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
-                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
+                                <a class="portfolio-box" href="public/images/portfolio/fullsize/3.jpg" title="Project Name">
+                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
                                     <div class="portfolio-box-caption">
                                         <div class="project-category text-white-50">Category</div>
                                         <div class="project-name">Project Name</div>
@@ -333,8 +335,8 @@
                                 </a>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
+                                <a class="portfolio-box" href="public/images/portfolio/fullsize/4.jpg" title="Project Name">
+                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
                                     <div class="portfolio-box-caption">
                                         <div class="project-category text-white-50">Category</div>
                                         <div class="project-name">Project Name</div>
@@ -342,8 +344,8 @@
                                 </a>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
-                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
+                                <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
+                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
                                     <div class="portfolio-box-caption">
                                         <div class="project-category text-white-50">Category</div>
                                         <div class="project-name">Project Name</div>
@@ -351,8 +353,8 @@
                                 </a>
                             </div>
                             <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
-                                    <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
+                                <a class="portfolio-box" href="public/images/portfolio/fullsize/6.jpg" title="Project Name">
+                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
                                     <div class="portfolio-box-caption p-3">
                                         <div class="project-category text-white-50">Category</div>
                                         <div class="project-name">Project Name</div>
