--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="public/vendors/venobox/venobox.min.css" type="text/css" media="screen" />
     <link href="public/vendors/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="public/vendors/aos/aos.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
 
     <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
@@ -24,6 +25,7 @@
     <!-- Main CSS File -->
     <link href="public/css/main.css" rel="stylesheet">
     <link href="public/css/style.css" rel="stylesheet">
+
 
 
     <title>Oumaima Creation CV</title>
@@ -132,25 +134,25 @@
             </div>
         </div>
         <div class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
-            <div class="container " >
+            <div class="container ">
                 <div class="row flex-row align-items-center  card " data-aos="fade-up" data-aos-offset="8">
                     <div class="mt-5 col-lg-6 col-md-6 col-sm-12">
-                        <img src="public/images/about.png" alt="about me" /> 
+                        <img src="public/images/about.png" alt="about me" />
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                        
-                            <div class=" card-body">
-                                <div class="h4 mt-0 title">About</div>
-                                <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.
-                                </p>
-                                <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4,
-                                    Now
-                                    UI Kit and FontAwesome, this modern and responsive design template is perfect to
-                                    showcase your portfolio, skills and experience. <a href="#" target="_blank">Learn
-                                        More</a></p>
-                            </div>
-                        
-                        <div >
+
+                        <div class=" card-body">
+                            <div class="h4 mt-0 title">About</div>
+                            <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.
+                            </p>
+                            <p>Creative CV is a HTML resume template for professionals. Built with Bootstrap 4,
+                                Now
+                                UI Kit and FontAwesome, this modern and responsive design template is perfect to
+                                showcase your portfolio, skills and experience. <a href="#" target="_blank">Learn
+                                    More</a></p>
+                        </div>
+
+                        <div>
                             <div class="card-body">
                                 <div class="h4 mt-0 title">Basic Information</div>
                                 <div class="row">
@@ -291,8 +293,9 @@
 
         </div>
         <!-- ======= Portfolio Section ======= -->
+
         <section class="section portfolio" id="portfolio">
-            <div class=" container">
+            <div class="container-fluid p-0 ">
                 <div class="h4 text-center mb-4 title mt-4">Portfolio</div>
                 <div class="card">
                     <div class="mt-3 row" data-aos="fade-in">
@@ -305,66 +308,93 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="container-fluid p-0">
-                        <div class="row g-0">
-                            <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
-                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
-                                    <div class="portfolio-box-caption">
-                                        <div class="project-category text-white-50">Category</div>
-                                        <div class="project-name">Project Name</div>
-                                    </div>
-                                </a>
+
+                </div>
+                <div class="row g-0">
+                    <div class="col-lg-4 col-sm-6 filter-app" >
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
-                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
-                                    <div class="portfolio-box-caption">
-                                        <div class="project-category text-white-50">Category</div>
-                                        <div class="project-name">Project Name</div>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-card">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="public/images/portfolio/fullsize/3.jpg" title="Project Name">
-                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
-                                    <div class="portfolio-box-caption">
-                                        <div class="project-category text-white-50">Category</div>
-                                        <div class="project-name">Project Name</div>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-web">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/3.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="public/images/portfolio/fullsize/4.jpg" title="Project Name">
-                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
-                                    <div class="portfolio-box-caption">
-                                        <div class="project-category text-white-50">Category</div>
-                                        <div class="project-name">Project Name</div>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-app">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/4.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
-                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
-                                    <div class="portfolio-box-caption">
-                                        <div class="project-category text-white-50">Category</div>
-                                        <div class="project-name">Project Name</div>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-card">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                            <div class="col-lg-4 col-sm-6">
-                                <a class="portfolio-box" href="public/images/portfolio/fullsize/6.jpg" title="Project Name">
-                                    <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
-                                    <div class="portfolio-box-caption p-3">
-                                        <div class="project-category text-white-50">Category</div>
-                                        <div class="project-name">Project Name</div>
-                                    </div>
-                                </a>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-web">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/6.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
                             </div>
-                        </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-app">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/7.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/7.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-card">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/8.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/8.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6 filter-web">
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/9.jpg" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/9.jpg" alt="..." />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">Category</div>
+                                <div class="project-name">Project Name</div>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
+
         </section><!-- End Portfolio Section -->
         <!-- ======= experiences Section ======= -->
         <section class=" section" id="experiences">
@@ -447,7 +477,9 @@
             <div class="container mb-5">
                 <div class="text-center mb-3" data-aos="fade-in" data-aos-delay="100">
                     <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit
+                        sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias
+                        ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
                 </div>
                 <div class="mt-5 owl-carousel owl-theme testimonials-carousel">
                     <div class="testimonial-item" data-aos="fade-up">
