--- a/index.html
+++ b/index.html
@@ -301,17 +301,17 @@
                     <div class="mt-3 row" data-aos="fade-in">
                         <div class="col-lg-12 d-flex justify-content-center">
                             <ul id="portfolio-flters">
-                                <li data-filter="*" class="filter-active">All</li>
-                                <li data-filter=".filter-app">App</li>
-                                <li data-filter=".filter-card">Card</li>
-                                <li data-filter=".filter-web">Web</li>
+                                <li data-filter="all" class="filterbtn filter-active">All</li>
+                                <li data-filter="app" class="filterbtn">App</li>
+                                <li data-filter="card" class="filterbtn">Card</li>
+                                <li data-filter="web" class="filterbtn">Web</li>
                             </ul>
                         </div>
                     </div>
 
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-4 col-sm-6 filter-app" >
+                    <div class="col-lg-4 col-sm-6 filter app" >
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -320,7 +320,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-card">
+                    <div class="col-lg-4 col-sm-6 filter card">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -329,7 +329,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-web">
+                    <div class="col-lg-4 col-sm-6 filter web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/3.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -338,7 +338,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-app">
+                    <div class="col-lg-4 col-sm-6 filter app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/4.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -347,7 +347,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-card">
+                    <div class="col-lg-4 col-sm-6 filter card">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
                             <div class="portfolio-box-caption">
@@ -356,7 +356,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-web">
+                    <div class="col-lg-4 col-sm-6 filter web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/6.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
@@ -365,7 +365,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-app">
+                    <div class="col-lg-4 col-sm-6 filter app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/7.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/7.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
@@ -374,7 +374,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-card">
+                    <div class="col-lg-4 col-sm-6 filter card">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/8.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/8.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
@@ -383,7 +383,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter-web">
+                    <div class="col-lg-4 col-sm-6 filter web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/9.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/9.jpg" alt="..." />
                             <div class="portfolio-box-caption p-3">
