--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Main CSS File -->
     <link href="public/css/main.css" rel="stylesheet">
-    <link href="public/css/style.css" rel="stylesheet">
+  
 
 
 
@@ -317,6 +317,13 @@
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
                                 <div class="project-name">Project Name</div>
+                                <div class="cap1">
+                                    <h3>Car show</h3>
+                                    <p>A car showroom for all verities of cars to display</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
