--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
         </div>
         <!-- ======= Portfolio Section ======= -->
 
-        <section class="section portfolio" id="portfolio">
-            <div class="container-fluid p-0 ">
+        <section class="section container portfolio" id="portfolio">
+            <div class=" p-0 ">
                 <div class="h4 text-center mb-4 title mt-4">Portfolio</div>
                 <div class="card">
                     <div class="mt-3 row" data-aos="fade-in">
@@ -310,16 +310,14 @@
                     </div>
 
                 </div>
-                <div class="row g-0">
+                <div class="imgs row g-0">
                     <div class="col-lg-4 col-sm-6 filter app" >
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
+                        <a  href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="align-content-center">                                
                                 <div class="cap1">
-                                    <h3>Car show</h3>
-                                    <p>A car showroom for all verities of cars to display</p>
+                                    <h3>Project Name</h3>
+                                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
                                     <a href="#"><p class="text-center">Visit</p></a>
@@ -330,72 +328,112 @@
                     <div class="col-lg-4 col-sm-6 filter card">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 filter web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/3.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 filter app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/4.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 filter card">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 filter web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/6.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 filter app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/7.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/7.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 filter card">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/8.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/8.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6 filter web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/9.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/9.jpg" alt="..." />
-                            <div class="portfolio-box-caption p-3">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                            <div class="each-item">                                
+                                <div class="cap1">
+                                    <h3>Project Name</h3>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                </div>
+                                <div class="cap2">
+                                    <a href="#"><p class="text-center">Visit</p></a>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -691,7 +729,8 @@
     <script src="public/vendors/jquery/jquery.waypoints.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="public/vendors/venobox/venobox.min.css"></script>
+    <!-- <script src="public/vendors/venobox/venobox.min.css"></script> -->
+    <!-- enlevez aussi le dossier venobos et le script -->
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/parallax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
