--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <link href="public/vendors/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="public/vendors/icofont/icofont.min.css" rel="stylesheet">
     <link href="public/vendors/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="public/vendors/venobox/venobox.min.css" type="text/css" media="screen" />
     <link href="public/vendors/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="public/vendors/aos/aos.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+    <link href="public/vendors/lightbox/lightbox.min.css" rel="stylesheet" />
 
     <!-- font-awesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
@@ -728,12 +727,9 @@
     <!-- à supprimer en cas de non inutilité -->
     <script src="public/vendors/jquery/jquery.waypoints.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
-    <script src="public/vendors/isotope-layout/isotope.pkgd.min.js"></script>
-    <!-- <script src="public/vendors/venobox/venobox.min.css"></script> -->
-    <!-- enlevez aussi le dossier venobos et le script -->
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/parallax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+    <script src="public/vendors/lightbox/lightbox.min.js"></script>
 
     <script src="public/js/main.js"></script>
 
