--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     </div>
 
                 </div>
-                <div class="imgs row g-0">
+                <div class="row g-0">
                     <div class="col-lg-4 col-sm-6 filter app" >
                         <a  href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
