--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                                     <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
-                                    <a href="#"><p class="text-center">Visit</p></a>
+                                    <a href="#"><p class="text-center align-middle">Visit</p></a>
                                 </div>
                             </div>
                         </a>
