--- a/index.html
+++ b/index.html
@@ -299,10 +299,10 @@
                 <div class="card">
                     <div class="mt-3 row" data-aos="fade-in">
                         <div class="col-lg-12 d-flex justify-content-center">
-                            <ul id="portfolio-flters">
+                            <ul id="portfolio-menu">
                                 <li data-filter="all" class="filterbtn filter-active">All</li>
                                 <li data-filter="app" class="filterbtn">App</li>
-                                <li data-filter="card" class="filterbtn">Card</li>
+                                <li data-filter="card" class="filterbtn">Design</li>
                                 <li data-filter="web" class="filterbtn">Web</li>
                             </ul>
                         </div>
@@ -315,8 +315,7 @@
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="align-content-center">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
-                                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
+                                    <h3 class="mb-4">Project Name</h3>                                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
                                     <a href="#"><p class="text-center align-middle">Visit</p></a>
@@ -324,12 +323,12 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter card">
+                    <div class="col-lg-4 col-sm-6 filter Design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
@@ -343,7 +342,7 @@
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
@@ -357,7 +356,7 @@
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
@@ -366,12 +365,12 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter card">
+                    <div class="col-lg-4 col-sm-6 filter Design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
@@ -385,7 +384,7 @@
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
@@ -399,7 +398,7 @@
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/7.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
@@ -408,12 +407,12 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6 filter card">
+                    <div class="col-lg-4 col-sm-6 filter Design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/8.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/8.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
@@ -427,7 +426,7 @@
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/9.jpg" alt="..." />
                             <div class="each-item">                                
                                 <div class="cap1">
-                                    <h3>Project Name</h3>
+                                    <h3 class="mb-4">Project Name</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dignissimos non illum illo neque labore.</p>
                                 </div>
                                 <div class="cap2">
