--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="section mt-4 mb-4" data-aos="fade-up" id="apropos">
             <div class="container ">
-                <div class="row flex-row align-items-center  card " data-aos="fade-up" data-aos-offset="8">
+                <div class="row flex-row   card " data-aos="fade-up" data-aos-offset="8">
                     <div class="mt-5 col-lg-6 col-md-6 col-sm-12">
                         <img src="public/images/about.png" alt="about me" />
                     </div>
@@ -295,7 +295,7 @@
 
         <section class="section  portfolio" id="portfolio">
             <div class="h4 text-center mb-4 title mt-4">Portfolio</div>
-            <div class="card">
+           
                 <div class="mt-4 row" data-aos="fade-in">
                     <div class="col-lg-12 d-flex justify-content-center">
                         <ul id="portfolio-menu">
@@ -307,10 +307,10 @@
                     </div>
                 </div>
 
-            </div>
+           
 
-            <div class="container p-0">
-                <div class="row g-0">
+            <div class="container">
+                <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-12 filter app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
@@ -329,7 +329,6 @@
                             </div>
                         </a>
                     </div>
-
                     <div class="col-lg-4 col-md-6 col-sm-12 filter design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
