--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row no-pad ">
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter app">
+                <div class="row  ">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="align-content-center ">
@@ -325,7 +325,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter design">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
                             <div class="each-item">
@@ -343,7 +343,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter web">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/3.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
                             <div class="each-item">
@@ -361,7 +361,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter app">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/4.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="each-item">
@@ -379,7 +379,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter design">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
                             <div class="each-item">
@@ -397,7 +397,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter web">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/6.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
                             <div class="each-item">
@@ -415,7 +415,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter app">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/7.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/7.jpg" alt="..." />
                             <div class="each-item">
@@ -433,7 +433,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter design">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/8.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/8.jpg" alt="..." />
                             <div class="each-item">
@@ -451,7 +451,7 @@
                             </div>
                         </a>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 filter web">
+                    <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/9.jpg" title="Project Name">
                             <img class="img-fluid" src="public/images/portfolio/thumbnails/9.jpg" alt="..." />
                             <div class="each-item">
