--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
                 </div>
                 <div class="row  ">
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/1.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/1.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/1.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/1.webp" alt="..." />
                             <div class="align-content-center ">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -326,8 +326,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/2.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/2.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/2.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/2.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -344,8 +344,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/3.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/3.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/3.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/3.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -362,8 +362,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/4.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/4.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/4.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/4.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -380,8 +380,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/5.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/5.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/5.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/5.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -398,8 +398,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/6.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/6.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/6.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/6.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -416,8 +416,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/7.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/7.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/7.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/7.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -434,8 +434,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/8.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/8.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/8.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/8.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
@@ -452,8 +452,8 @@
                         </a>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
-                        <a class="portfolio-box" href="public/images/portfolio/fullsize/9.jpg" title="Project Name">
-                            <img class="img-fluid" src="public/images/portfolio/thumbnails/9.jpg" alt="..." />
+                        <a class="portfolio-box" href="public/images/portfolio/fullsize/9.webp" title="Project Name">
+                            <img class="img-fluid" src="public/images/portfolio/thumbnails/9.webp" alt="..." />
                             <div class="each-item">
                                 <div class="cap1">
                                     <h3 class="mb-4">Project Name</h3>
